--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -12,6 +12,7 @@
     "@radix-ui/react-avatar": "^1.0.3",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.4",
     "@react-pdf/renderer": "^3.1.12",
     "autoprefixer": "10.4.15",
     "class-variance-authority": "^0.7.0",
